--- a/pgnGenerator.ipynb
+++ b/pgnGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,12 @@
     "import chess.pgn\n",
     "import chess\n",
     "import json\n",
-    "from chess.engine import Cp\n",
-    "\n",
-    "import requests\n",
-    "import chess\n",
-    "import chess.pgn\n",
-    "import json\n",
     "from chess.engine import Cp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Salvataggio della partita in formato PGN\n",
-    "with open(\"ProvaPgnGenerator.pgn\", \"w\") as f:\n",
+    "with open(\"repertorio.pgn\", \"w\") as f:\n",
     "    exporter = chess.pgn.FileExporter(f)\n",
     "    game.accept(exporter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +160,7 @@
       "[Black \"?\"]\n",
       "[Result \"*\"]\n",
       "\n",
-      "1. e4 { [%eval 0.42] } ( 1. e4 { [%eval 0.42] } 1... c5 { 47%/7%/44% [%eval 0.42] } ( 1... e5 { 47%/7%/44% [%eval 0.42] } 2. Nf3 { 48%/7%/44% [%eval 0.42] } ( 2. Nc3 { 48%/7%/44% [%eval 0.42] } ) ) 2. Nf3 { 47%/7%/45% [%eval 0.42] } ( 2. Nc3 { 47%/7%/45% [%eval 0.42] } ) ) 1... c5 *\n"
+      "1. e4 { [%eval 0.42] } 1... c5 { 47/7/44 [%eval 0.42] } ( 1... e5 { 47/7/44 [%eval 0.42] } 2. Nf3 { 48/7/44 [%eval 0.42] } ( 2. Nc3 { 48/7/44 [%eval 0.42] } ) ) 2. Nf3 { 47/7/45 [%eval 0.42] } ( 2. Nc3 { 47/7/45 [%eval 0.42] } ) *\n"
      ]
     }
    ],
