WIP: scelta della mossa del giocatore

--- a/prova.ipynb
+++ b/prova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import chess\n",
     "import chess.pgn\n",
     "import json\n",
-    "from chess.engine import Cp"
+    "from chess.engine import Cp\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
        "'d7d5'"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
        "1"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +146,13 @@
     "\n",
     "    tot = w+b+d\n",
     "\n",
+    "    tree_move['tot_games'] = tot\n",
+    "\n",
     "    tree_move['white'] = (int)(w/tot * 100)\n",
     "    tree_move['black'] = (int)(b/tot * 100)\n",
     "    tree_move['draws'] = (int)(d/tot * 100)\n",
+    "    \n",
+    "    tree_move['strongest_practical'] = tree_move['white'] if (node.board().turn) else tree_move['black']\n",
     "        \n",
     "    tree_move['perc'] = (int)((float)(tot)/total_games * 100.)\n",
     "    \n",
@@ -158,17 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_moves(bIsPlayerTurn, move_list, perc_cumulative):\n",
+    "def filter_moves(bIsWhiteToMove, move_list, perc_cumulative, bIsWhiteRepertoire):\n",
     "    \"\"\"filtra le mosse per trovare o le candidate per il giocatore oppure quelle da considerare dagli avversari\n",
     "\n",
     "    Args:\n",
     "        bIsPlayerTurn (bool): si ricerca la mossa del giocatore ?\n",
     "        move_list (list): tree['moves']\n",
     "        perc_cumulative (int): nel caso in cui si debbano considerare le mosse avversarie si vuole comprire una % totale non inferiore a questo numero\n",
+    "        bIsWhiteRepertoire (bool): booleano che indica se si sta costruendo un repertorio per il bianco o per il nero\n",
     "\n",
     "    Returns:\n",
     "        list: lista delle mosse candidate e loro relativi commenti\n",
@@ -176,14 +182,25 @@
     "    \n",
     "    ret_moves = []\n",
     "    \n",
+    "    bIsPlayerTurn = (bIsWhiteToMove == bIsWhiteRepertoire)\n",
     "    \n",
-    "    \n",
+    "    if(bIsPlayerTurn):\n",
+    "        sorted_moves = sorted(tree['moves'], key=lambda x: x[\"strongest_practical\"], reverse=True)\n",
+    "        \n",
+    "        for m in sorted_moves:\n",
+    "            if m[\"eval_pos\"] > 3: # se la mossa non è tra le prime tre del motore la scarto\n",
+    "                continue\n",
+    "            if(bIsWhiteToMove and m['eval'] < -1) or (not bIsWhiteToMove and m['eval'] > 1): # se la mossa ha una valutazione del motore non accettabile (< -1 e tocca la bianco o > 1 e tocca al nero) la scarto\n",
+    "                continue\n",
+    "            ret_moves.append(m)\n",
+    "            return ret_moves # se tocca al giocatore considero solo una mossa alla volta\n",
+    "            \n",
     "    return ret_moves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,47 +209,334 @@
     "for move in tree['moves']:\n",
     "    compute_evaluations(node, move, total_games)\n",
     "    \n",
-    "    \n",
     "eval_sorted_moves = sorted(tree['moves'], key=lambda x: x[\"eval\"])\n",
+    "\n",
+    "toMove_sorted_moves = [] #score relativo da db in base a chi deve muovere\n",
+    "\n",
+    "if(node.board().turn):\n",
+    "    toMove_sorted_moves = sorted(tree['moves'], key=lambda x: x[\"white\"], reverse=True)\n",
+    "else:\n",
+    "    toMove_sorted_moves = sorted(tree['moves'], key=lambda x: x[\"black\"], reverse=True)\n",
+    "  \n",
+    "toMove_sorted_moves\n",
     "\n",
     "for i, item in enumerate(tree['moves']):\n",
     "    item[\"freq_pos\"] = i\n",
     "    item[\"eval_pos\"] = eval_sorted_moves.index(item)\n",
-    "    item[\"relative_choid_diff\"] = item[\"eval_pos\"] - item[\"freq_pos\"]"
+    "    item[\"dbscore_pos\"] = toMove_sorted_moves.index(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d5 \t 0 \t 0 \t 0\n",
-      "e5 \t 1 \t 1 \t 0\n",
-      "d6 \t 2 \t 5 \t 3\n",
-      "c5 \t 3 \t 2 \t -1\n",
-      "h5 \t 4 \t 7 \t 3\n",
-      "g6 \t 5 \t 8 \t 3\n",
-      "c6 \t 6 \t 6 \t 0\n",
-      "e6 \t 7 \t 4 \t -3\n",
-      "Nf6 \t 8 \t 10 \t 2\n",
-      "Nc6 \t 9 \t 3 \t -6\n",
-      "b6 \t 10 \t 9 \t -1\n",
-      "g5 \t 11 \t 11 \t 0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uci</th>\n",
+       "      <th>san</th>\n",
+       "      <th>averageRating</th>\n",
+       "      <th>white</th>\n",
+       "      <th>draws</th>\n",
+       "      <th>black</th>\n",
+       "      <th>game</th>\n",
+       "      <th>tot_games</th>\n",
+       "      <th>strongest_practical</th>\n",
+       "      <th>perc</th>\n",
+       "      <th>eval</th>\n",
+       "      <th>freq_pos</th>\n",
+       "      <th>eval_pos</th>\n",
+       "      <th>dbscore_pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d7d5</td>\n",
+       "      <td>d5</td>\n",
+       "      <td>2305</td>\n",
+       "      <td>47</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>None</td>\n",
+       "      <td>79919</td>\n",
+       "      <td>46</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-1.28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e7e5</td>\n",
+       "      <td>e5</td>\n",
+       "      <td>2302</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48</td>\n",
+       "      <td>None</td>\n",
+       "      <td>17487</td>\n",
+       "      <td>48</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-0.93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d7d6</td>\n",
+       "      <td>d6</td>\n",
+       "      <td>2292</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9855</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-0.60</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c7c5</td>\n",
+       "      <td>c5</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9024</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.88</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>h7h5</td>\n",
+       "      <td>h5</td>\n",
+       "      <td>2306</td>\n",
+       "      <td>44</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7927</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>g7g6</td>\n",
+       "      <td>g6</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>46</td>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6745</td>\n",
+       "      <td>47</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.35</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>c7c6</td>\n",
+       "      <td>c6</td>\n",
+       "      <td>2289</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6580</td>\n",
+       "      <td>47</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.47</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>e7e6</td>\n",
+       "      <td>e6</td>\n",
+       "      <td>2279</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5492</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.61</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>g8f6</td>\n",
+       "      <td>Nf6</td>\n",
+       "      <td>2293</td>\n",
+       "      <td>48</td>\n",
+       "      <td>4</td>\n",
+       "      <td>46</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2188</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>b8c6</td>\n",
+       "      <td>Nc6</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>49</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2094</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.81</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>b7b6</td>\n",
+       "      <td>b6</td>\n",
+       "      <td>2267</td>\n",
+       "      <td>53</td>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1331</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>g7g5</td>\n",
+       "      <td>g5</td>\n",
+       "      <td>2311</td>\n",
+       "      <td>52</td>\n",
+       "      <td>8</td>\n",
+       "      <td>38</td>\n",
+       "      <td>None</td>\n",
+       "      <td>760</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     uci  san  averageRating  white  draws  black  game  tot_games  \\\n",
+       "0   d7d5   d5           2305     47      5     46  None      79919   \n",
+       "1   e7e5   e5           2302     45      5     48  None      17487   \n",
+       "2   d7d6   d6           2292     46      5     47  None       9855   \n",
+       "3   c7c5   c5           2290     46      5     48  None       9024   \n",
+       "4   h7h5   h5           2306     44      5     50  None       7927   \n",
+       "5   g7g6   g6           2290     46      6     47  None       6745   \n",
+       "6   c7c6   c6           2289     46      5     47  None       6580   \n",
+       "7   e7e6   e6           2279     46      5     47  None       5492   \n",
+       "8   g8f6  Nf6           2293     48      4     46  None       2188   \n",
+       "9   b8c6  Nc6           2283     45      5     49  None       2094   \n",
+       "10  b7b6   b6           2267     53      4     42  None       1331   \n",
+       "11  g7g5   g5           2311     52      8     38  None        760   \n",
+       "\n",
+       "    strongest_practical  perc  eval  freq_pos  eval_pos  dbscore_pos  \n",
+       "0                    46    52 -1.28         0         0            8  \n",
+       "1                    48    11 -0.93         1         1            2  \n",
+       "2                    47     6 -0.60         2         5            4  \n",
+       "3                    48     5 -0.88         3         2            3  \n",
+       "4                    50     5 -0.44         4         7            0  \n",
+       "5                    47     4 -0.35         5         8            5  \n",
+       "6                    47     4 -0.47         6         6            6  \n",
+       "7                    47     3 -0.61         7         4            7  \n",
+       "8                    46     1  0.25         8        10            9  \n",
+       "9                    49     1 -0.81         9         3            1  \n",
+       "10                   42     0 -0.09        10         9           10  \n",
+       "11                   38     0  0.35        11        11           11  "
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for move in tree['moves']:\n",
-    "    print(move['san'], \"\\t\", move['freq_pos'], \"\\t\", move['eval_pos'], \"\\t\", move[\"relative_choid_diff\"])"
+    "pd.DataFrame(tree['moves'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO: \n",
+    "* se è il giocatore a muovere bisogna scegliere la mossa candidata con la logica: \n",
+    "> 1. si ordinando le mosse inversamente allo score del db\n",
+    "> 2. si guarda la prima mossa, la scelgo se è tra le prime 3 (configurabile) del motore + se la valutazione del motore non è peggiore di +/- 1 (se ho il bianco non voglio scegliere linee minori di -1. Viceversa per il nero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
