WIP: scripts python

--- a/notebooks/prova.ipynb
+++ b/notebooks/prova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,21 @@
     "    \"speeds\": \"blitz,rapid,classical\",\n",
     "    \"ratings\": \"2200,2500\",\n",
     "    \"fen\": None\n",
+    "}\n",
+    "\n",
+    "\n",
+    "url_eval = \"https://lichess.org/api/cloud-eval\"\n",
+    "\n",
+    "params_eval = {\n",
+    "    \"variant\": \"standard\",\n",
+    "    \"multiPv\": \"1\",\n",
+    "    \"fen\": None\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +97,7 @@
        "'d7d5'"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
        "1"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_moves(bIsWhiteToMove, move_list, perc_cumulative, bIsWhiteRepertoire):\n",
+    "def filter_moves(move_list, bIsWhiteToMove, bIsWhiteRepertoire):\n",
     "    \"\"\"filtra le mosse per trovare o le candidate per il giocatore oppure quelle da considerare dagli avversari\n",
     "\n",
     "    Args:\n",
-    "        bIsPlayerTurn (bool): si ricerca la mossa del giocatore ?\n",
     "        move_list (list): tree['moves']\n",
-    "        perc_cumulative (int): nel caso in cui si debbano considerare le mosse avversarie si vuole comprire una % totale non inferiore a questo numero\n",
+    "        bIsWhiteToMove (bool): deve muovere il bianco ?\n",
     "        bIsWhiteRepertoire (bool): booleano che indica se si sta costruendo un repertorio per il bianco o per il nero\n",
     "\n",
     "    Returns:\n",
@@ -185,7 +193,7 @@
     "    bIsPlayerTurn = (bIsWhiteToMove == bIsWhiteRepertoire)\n",
     "    \n",
     "    if(bIsPlayerTurn):\n",
-    "        sorted_moves = sorted(tree['moves'], key=lambda x: x[\"strongest_practical\"], reverse=True)\n",
+    "        sorted_moves = sorted(move_list, key=lambda x: x[\"strongest_practical\"], reverse=True)\n",
     "        \n",
     "        for m in sorted_moves:\n",
     "            if m[\"eval_pos\"] > 3: # se la mossa non è tra le prime tre del motore la scarto\n",
@@ -194,13 +202,21 @@
     "                continue\n",
     "            ret_moves.append(m)\n",
     "            return ret_moves # se tocca al giocatore considero solo una mossa alla volta\n",
+    "    else:\n",
+    "        sorted_moves = sorted(move_list, key=lambda x: x[\"perc\"], reverse=True)\n",
+    "        perc_sum = 0\n",
+    "        for m in sorted_moves:\n",
+    "            ret_moves.append(m)\n",
+    "            perc_sum += m[\"perc\"]\n",
+    "            if(perc_sum > 80): # considero mosse fino al punto in cui ho coperto almeno l'80% delle mosse giocate\n",
+    "                return ret_moves\n",
     "            \n",
     "    return ret_moves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +294,7 @@
        "      <td>5</td>\n",
        "      <td>46</td>\n",
        "      <td>None</td>\n",
-       "      <td>79919</td>\n",
+       "      <td>79925</td>\n",
        "      <td>46</td>\n",
        "      <td>52</td>\n",
        "      <td>-1.28</td>\n",
@@ -295,7 +311,7 @@
        "      <td>5</td>\n",
        "      <td>48</td>\n",
        "      <td>None</td>\n",
-       "      <td>17487</td>\n",
+       "      <td>17491</td>\n",
        "      <td>48</td>\n",
        "      <td>11</td>\n",
        "      <td>-0.93</td>\n",
@@ -312,7 +328,7 @@
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>9855</td>\n",
+       "      <td>9856</td>\n",
        "      <td>47</td>\n",
        "      <td>6</td>\n",
        "      <td>-0.60</td>\n",
@@ -329,7 +345,7 @@
        "      <td>5</td>\n",
        "      <td>48</td>\n",
        "      <td>None</td>\n",
-       "      <td>9024</td>\n",
+       "      <td>9025</td>\n",
        "      <td>48</td>\n",
        "      <td>5</td>\n",
        "      <td>-0.88</td>\n",
@@ -346,7 +362,7 @@
        "      <td>5</td>\n",
        "      <td>50</td>\n",
        "      <td>None</td>\n",
-       "      <td>7927</td>\n",
+       "      <td>7928</td>\n",
        "      <td>50</td>\n",
        "      <td>5</td>\n",
        "      <td>-0.44</td>\n",
@@ -363,7 +379,7 @@
        "      <td>6</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>6745</td>\n",
+       "      <td>6746</td>\n",
        "      <td>47</td>\n",
        "      <td>4</td>\n",
        "      <td>-0.35</td>\n",
@@ -380,7 +396,7 @@
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>6580</td>\n",
+       "      <td>6581</td>\n",
        "      <td>47</td>\n",
        "      <td>4</td>\n",
        "      <td>-0.47</td>\n",
@@ -397,7 +413,7 @@
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>5492</td>\n",
+       "      <td>5493</td>\n",
        "      <td>47</td>\n",
        "      <td>3</td>\n",
        "      <td>-0.61</td>\n",
@@ -479,14 +495,14 @@
       ],
       "text/plain": [
        "     uci  san  averageRating  white  draws  black  game  tot_games  \\\n",
-       "0   d7d5   d5           2305     47      5     46  None      79919   \n",
-       "1   e7e5   e5           2302     45      5     48  None      17487   \n",
-       "2   d7d6   d6           2292     46      5     47  None       9855   \n",
-       "3   c7c5   c5           2290     46      5     48  None       9024   \n",
-       "4   h7h5   h5           2306     44      5     50  None       7927   \n",
-       "5   g7g6   g6           2290     46      6     47  None       6745   \n",
-       "6   c7c6   c6           2289     46      5     47  None       6580   \n",
-       "7   e7e6   e6           2279     46      5     47  None       5492   \n",
+       "0   d7d5   d5           2305     47      5     46  None      79925   \n",
+       "1   e7e5   e5           2302     45      5     48  None      17491   \n",
+       "2   d7d6   d6           2292     46      5     47  None       9856   \n",
+       "3   c7c5   c5           2290     46      5     48  None       9025   \n",
+       "4   h7h5   h5           2306     44      5     50  None       7928   \n",
+       "5   g7g6   g6           2290     46      6     47  None       6746   \n",
+       "6   c7c6   c6           2289     46      5     47  None       6581   \n",
+       "7   e7e6   e6           2279     46      5     47  None       5493   \n",
        "8   g8f6  Nf6           2293     48      4     46  None       2188   \n",
        "9   b8c6  Nc6           2283     45      5     49  None       2094   \n",
        "10  b7b6   b6           2267     53      4     42  None       1331   \n",
@@ -507,13 +523,103 @@
        "11                   38     0  0.35        11        11           11  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.DataFrame(tree['moves'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidates = filter_moves(tree['moves'], bIsWhiteToMove = False, bIsWhiteRepertoire = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uci</th>\n",
+       "      <th>san</th>\n",
+       "      <th>averageRating</th>\n",
+       "      <th>white</th>\n",
+       "      <th>draws</th>\n",
+       "      <th>black</th>\n",
+       "      <th>game</th>\n",
+       "      <th>tot_games</th>\n",
+       "      <th>strongest_practical</th>\n",
+       "      <th>perc</th>\n",
+       "      <th>eval</th>\n",
+       "      <th>freq_pos</th>\n",
+       "      <th>eval_pos</th>\n",
+       "      <th>dbscore_pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b8c6</td>\n",
+       "      <td>Nc6</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>49</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2094</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.81</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    uci  san  averageRating  white  draws  black  game  tot_games  \\\n",
+       "0  b8c6  Nc6           2283     45      5     49  None       2094   \n",
+       "\n",
+       "   strongest_practical  perc  eval  freq_pos  eval_pos  dbscore_pos  \n",
+       "0                   49     1 -0.81         9         3            1  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(candidates)"
    ]
   },
   {
@@ -536,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -549,6 +655,29 @@
    ],
    "source": [
     "print('\\U0001F534', '\\U0001F7E0', '\\U0001F7E1', '\\U0001F7E2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caricamento: 100%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "import time\n",
+    "\n",
+    "for i in range(1, 101):\n",
+    "    time.sleep(0.1)\n",
+    "    clear_output(wait=True)\n",
+    "    print(f\"Caricamento: {i}%\")\n"
    ]
   },
   {
